# pi-parallelization-examples

./: README.md  meson.build
include/: PiCalculatorOpenMPSIMD.hpp  PiCalculatorVanilla.hpp
pi-calculator-avx/: meson.build
pi-calculator-avx/include/: PiCalculatorASMAVX.hpp  PiCalculatorAVXASM.hpp  PiCalculatorAVXIntrin.hpp
pi-calculator-avx/src/: PiCalculatorASMAVX.asm  PiCalculatorASMAVX.cpp  PiCalculatorAVXASM.asm  PiCalculatorAVXASM.cpp  PiCalculatorAVXBenchmark.cpp  PiCalculatorAVXIntrin.cpp  PiCalculatorAVXTest.cpp
pi-calculator-common/: meson.build
pi-calculator-common/include/: PiCalculator.asm  PiCalculator.hpp  PiCalculatorBenchmark.hpp  PiCalculatorTest.hpp
pi-calculator-portable/: meson.build
pi-calculator-portable/include/: PiCalculatorOpenMPParallel.hpp  PiCalculatorOpenMPParallelSIMD.hpp
pi-calculator-portable/src/: PiCalculatorOpenMPParallel.cpp  PiCalculatorOpenMPParallelSIMD.cpp  PiCalculatorOpenMPSIMD.cpp  PiCalculatorPortableBenchmark.cpp  PiCalculatorPortableTest.cpp  PiCalculatorVanilla.cpp
src/: PiCalculatorASMAVX.asm  PiCalculatorASMAVX.cpp  PiCalculatorBenchmark.cpp  PiCalculatorOpenMPParallel.cpp  PiCalculatorOpenMPParallelSIMD.cpp  PiCalculatorOpenMPSIMD.cpp  PiCalculatorTest.cpp  PiCalculatorVanilla.cpp
subprojects/: .gitignore
